# TSU_StudyWork

C_CPP/1_term/10_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/1_term/1_Chapter/15/: CMakeLists.txt  main.cpp
C_CPP/1_term/1_Chapter/45/: CMakeLists.txt  main.cpp
C_CPP/1_term/1_Chapter/7/: CMakeLists.txt  main.cpp
C_CPP/1_term/2_Chapter/26/: CMakeLists.txt  main.cpp
C_CPP/1_term/4_Chapter/52/: CMakeLists.txt  main.cpp  tmcor_c_lib.h
C_CPP/1_term/5_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/1_term/6_Chapter/: CMakeLists.txt  main.cpp
C_CPP/1_term/7_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/1_term/8_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/1_term/9_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/1_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/2_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/3_Chapter/: CMakeLists.txt  main.cpp  main.txt  rezult.txt  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/3_Chapter_Homework/: CMakeLists.txt  data.txt  main.cpp  rezult.txt  tmcor_c_lib.cpp
C_CPP/2_term/4_Chapter/: CMakeLists.txt  main.cpp  main.txt  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/5_Chapter_2/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/6_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
C_CPP/2_term/7_Chapter/: CMakeLists.txt  main.cpp  tmcor_c_lib.cpp  tmcor_c_lib.h
(+24 files in other folders)
